tests/baselines/reference/tsxNoTypeAnnotatedSFC.errors.txt
tsxNoTypeAnnotatedSFC.tsx(2,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== tsxNoTypeAnnotatedSFC.tsx (1 errors) ====
    // not _actually_ making react available in this test to regression test #22948
    import * as React from 'react';
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    const Test123 = () => <div/>;
    
    function testComponent(props) {
        return <Test123 {...props}/>;
    }